--- a/app/views/socials/index.html.erb
+++ b/app/views/socials/index.html.erb
@@ -58,6 +58,14 @@
               <p>Gender: <%= social.user.gender %></p>
 
             </p>
+            <h3>Comments</h3>
+            <% social.comments.each do |comment| %>
+              <div>
+                <strong><%= comment.user.email %>:</strong>
+                <%= comment.content %>
+              </div>
+            <% end %>
+              
             <div>
               <%= link_to "Delete", social, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Bloging?" } %>
             </div>
